<resources>
    <string name="app_name">ForgeYourDiet</string>

    <string name="title">Forge Your Diet</string>
    <string name="greeting">Welcome to Forge Your Diet</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password\n</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Sign up\n</string>

    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="calories">Calories</string>

    <string name="NutritionSummary_title">Weekly Nutrition Summary</string>
    <string name="NutritionSummary_log_calories">Log Calories Goal</string>
    <string name="NutritionSummary_log_carbs">Log Carbohydrate Goal</string>
    <string name="NutritionSummary_log_fat">Log Fat Goal</string>
    <string name="NutritionSummary_log_protein">Log Protein Goal</string>
    <string name="NutritionSummary_enter_cal">Enter calories for the day</string>
    <string name="NutritionSummary_log_hint">Keep track of your calorie intake here</string>
    <string name="NutritionSummary_macro_goal">Select Macronutrient Goal</string>
    <string name="NutritionSummary_macro_hint">Choose a macronutrient to focus on</string>

    <string name="doneButton">Done</string>
</resources>