<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D9D9"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header Section -->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/subject" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/greeting"
        android:textColor="#BC9E9E"
        android:textSize="14sp" />

    <!-- Email Input -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:text="@string/email_address_or_username"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_email_or_username"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <!-- Password Input -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:text="@string/password"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="50dp"> <!-- Adjust padding if needed -->

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="18dp"
            android:backgroundTint="#3E8E7E"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="18dp"
            android:backgroundTint="#FF6F61"
            android:text="@string/sign_up"
            android:textColor="#FFF" />
    </LinearLayout>


</LinearLayout>
